--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ footer{
 
 
 
-@media screen and (device-aspect-ratio:40/71) {
+@media (max-width:320px) {
 	section{
 		width:600px;
 		margin-bottom:20px;
