--- a/style.css
+++ b/style.css
@@ -381,9 +381,61 @@ footer{
 
 	
 
+/* iphone5 미디어쿼리---------------------- */
+
+@media screen and (device-aspect-ratio: 40/71) {
+	section{
+		width:300px;
+		margin-bottom:20px;
+	}
+
+	.desc_image{
+	width:225px;
+	margin:auto;
+	padding: 5px 0;
+}
+	
+
+	.headline{
+		width:300px;
+		margin:auto;
+		text-align:center;
+		font-size:20px;
+		font-weight:bold;
+		line-height:25px;
+		margin-bottom:15px;
+	}
+
+	h2{
+	font-size:1.6em;
+	font-weight:bold;
+	margin-bottom:10px;
+	}
+
+	.subtitle{
+	padding:5px 10px 5px 10px;
+	width:80%;
+	margin-left:10%;
+	color:#1e1e1e;
+	margin-bottom:5px;
+	text-align:justify;
+	}	
+	.visual_list>li{
+		width:90px;
+		background-color:#ffffff;
+		float:left;
+		margin-left:5px;
+		margin-bottom:5px;
+		text-align:center;
+	}
+	ul.text_list, .desc_image{float:none;width:80%;margin:auto;}
 
 
-@media (max-width:320px) {
+}
+
+/* iphone3,4 미디어쿼리---------------------- */
+
+@media screen and (device-aspect-ratio: 2/3) {
 	section{
 		width:300px;
 		margin-bottom:20px;
