--- a/style.css
+++ b/style.css
@@ -427,6 +427,17 @@ footer{
 	border-radius:0;
 	}
 
+	.text_list>li{
+		clear:left;
+		width:95%;
+		float:none;
+		/*border:2px solid #cccccc;*/
+		border-radius:5px;
+		margin:5px 2%;
+		padding:10px 0;
+		text-align:center;
+	}
+
 	.text_list>li>.text_desc{
 	clear:right;
 	width:95%;
