--- a/style.css
+++ b/style.css
@@ -441,8 +441,8 @@ footer{
 	.text_list>li>.text_desc{
 	clear:right;
 	width:95%;
-	height:60px;
-	line-height:60px;
+	height:74px;
+	line-height:74px;
 	float:none;
 	border-radius:2px;
 	margin:0 2%;
@@ -465,5 +465,13 @@ footer{
 	}
 	ul.text_list, .desc_image{float:none;width:95%;margin:auto;}
 
+	.more_desc{
+	clear:both;
+	width:9%;
+	margin:5px 2% 5px 2%;
+	letter-spacing:-0.5px;
+	font-size:35px;
+	text-align:justify;
+}
 
 }
