--- a/style.css
+++ b/style.css
@@ -406,6 +406,14 @@ footer{
 		margin-bottom:15px;
 	}
 
+	#livereContainer{
+	width:90%px;
+	height:450px;
+	margin:15px auto;
+	overflow-y:scroll;
+	overflow-x:hidden;
+	}
+
 	h2{
 	font-size:60px;
 	font-weight:bold;
@@ -504,6 +512,14 @@ footer{
 	font-size:55px;
 	font-weight:bold;
 	margin-bottom:10px;
+	}
+	
+	#livereContainer{
+	width:90%px;
+	height:450px;
+	margin:15px auto;
+	overflow-y:scroll;
+	overflow-x:hidden;
 	}
 
 	.subtitle{
