#liverecontainer width 90%px에서 90%로 정정

--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ footer{
 	}
 
 	#livereContainer{
-	width:90%px;
+	width:90%;
 	height:450px;
 	margin:15px auto;
 	overflow-y:scroll;
@@ -515,7 +515,7 @@ footer{
 	}
 	
 	#livereContainer{
-	width:90%px;
+	width:90%;
 	height:450px;
 	margin:15px auto;
 	overflow-y:scroll;
