--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+/* 나눔고딕 웹폰트 ----------- */
+
+/* @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);  ---------나눔고딕 웹폰트 html에만 넣음 */
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
