--- a/style.css
+++ b/style.css
@@ -387,6 +387,51 @@ footer{
 
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 640px) {
+
+	header{
+	position:relative;
+	height:150px;
+	width:100%;
+	border-bottom:2px solid #cccccc;
+	background-color:rgba(0,0,0,0.01);
+	padding:5px 40px 10px 72px;
+	}
+
+.header_right{
+	float:right;
+	margin-right:50px;
+}
+
+.header_left{
+	float:left;
+}
+
+.nav{
+	width:200px;
+	height:100px;
+	font-size:30px;
+	margin-right:12px;
+	margin-top:13px;
+	line-height:33px;
+	text-align:center;
+	float:right;
+	color:#666666;
+}
+
+.nav_button{
+	/*background-color:#960010;*/
+	background-color:#418323;
+	color:#FFFFFF;
+	border:4px solid #a8c795;
+	border-radius:10px;
+	height:100px;
+	line-height:100px;
+	margin-top:13px;
+}
+
+
+
+
 	section{
 		width:100%;
 		margin-bottom:20px;
