--- a/style.css
+++ b/style.css
@@ -391,32 +391,33 @@ footer{
 	header{
 	position:relative;
 	height:150px;
-	width:100%;
+	/* min-width:100%; */
 	border-bottom:2px solid #cccccc;
 	background-color:rgba(0,0,0,0.01);
-	padding:5px 40px 10px 72px;
+	/* padding:5px 40px 10px 72px; */
 	}
 
 .header_right{
 	float:right;
 	margin-right:50px;
-}
+	}
 
 .header_left{
 	float:left;
-}
+	}
 
 .nav{
-	width:200px;
-	height:100px;
-	font-size:30px;
+	width:250px;
+	height:120px;
+	font-size:35px;
+	font-weight:bold;
 	margin-right:12px;
 	margin-top:13px;
-	line-height:33px;
+	line-height:35px;
 	text-align:center;
 	float:right;
 	color:#666666;
-}
+	}
 
 .nav_button{
 	/*background-color:#960010;*/
@@ -424,8 +425,8 @@ footer{
 	color:#FFFFFF;
 	border:4px solid #a8c795;
 	border-radius:10px;
-	height:100px;
-	line-height:100px;
+	height:120px;
+	line-height:120px;
 	margin-top:13px;
 }
 
