--- a/style.css
+++ b/style.css
@@ -389,7 +389,7 @@ footer{
 @media only screen and (min-device-width : 320px) and (max-device-width : 640px) {
 
 	header{
-	position:relative;
+	/* position:relative; */
 	height:150px;
 	/* min-width:100%; */
 	border-bottom:2px solid #cccccc;
@@ -434,6 +434,7 @@ footer{
 
 
 	section{
+		clear:both;
 		width:100%;
 		margin-bottom:20px;
 	}
