--- a/style.css
+++ b/style.css
@@ -537,6 +537,51 @@ footer{
 /* 갤스3 이상을 위한 미디어 쿼리 ----------------*/
 
 @media only screen and (min-device-width : 640px) and (max-device-width : 960px) {
+		header{
+	/* position:relative; */
+	height:150px;
+	/* min-width:100%; */
+	border-bottom:2px solid #cccccc;
+	background-color:rgba(0,0,0,0.01);
+	/* padding:5px 40px 10px 72px; */
+	}
+
+	.header_right{
+		float:right;
+		margin-right:20px;
+		}
+
+	.header_left{
+		float:left;
+		}
+
+	.nav{
+		width:170px;
+		height:80px;
+		font-size:23px;
+		font-weight:bold;
+		margin-right:12px;
+		margin-top:13px;
+		line-height:23px;
+		text-align:center;
+		float:right;
+		color:#666666;
+		}
+
+	.nav_button{
+		/*background-color:#960010;*/
+		background-color:#418323;
+		color:#FFFFFF;
+		border:4px solid #a8c795;
+		border-radius:10px;
+		height:80px;
+		line-height:80px;
+		margin-top:13px;
+		margin-left:20px;
+		}
+
+
+
 	section{
 		width:100%;
 		margin-bottom:20px;
