redbox를 진짜 redbox로 background color 조정

--- a/style.css
+++ b/style.css
@@ -195,7 +195,8 @@ h2{
 .redbox{
 	/* background-color:#938172; */
 	/*background-color:#cc9e61;*/
-	background-color:#5e5e5e;
+	/* background-color:#5e5e5e;*/
+	background-color:#e33d44;
 	color:#ffffff;
 }
 .text_desc{
