--- a/style.css
+++ b/style.css
@@ -181,6 +181,11 @@ ul.text_list{
 	height:60px;
 	background-color:#ffffff;
 	border:3px solid #5e5e5e;
+	background-repeat: no-repeat;
+}
+
+#seoul{
+	background-image: url('../images/customers/seoul.png');
 }
 
 .more_desc{
