--- a/style.css
+++ b/style.css
@@ -179,14 +179,42 @@ ul.text_list{
 	text-align:center;
 	width:110px;
 	height:60px;
-	background-color:#ffffff;
+	/* background-color:#ffffff; */
 	border:3px solid #5e5e5e;
 	background-repeat: no-repeat;
+	background-size: 90%;
+	background-position: center;
 }
 
 #seoul{
-	background-image: url('../images/customers/seoul.png');
+	background-image: url('../vote2014/images/customers/seoul.png');
 }
+#busan{
+	background-image: url('../vote2014/images/customers/busan.png');
+}
+#sejong{
+	background-image: url('../vote2014/images/customers/sejong.png');
+}
+#kbs{
+	background-image: url('../vote2014/images/customers/kbs.png');
+}
+#mbc{
+	background-image: url('../vote2014/images/customers/mbc.png');
+}
+#sbs{
+	background-image: url('../vote2014/images/customers/sbs.png');
+}
+#yonhap{
+	background-image: url('../vote2014/images/customers/yonhap.png');
+}
+#samsung{
+	background-image: url('../vote2014/images/customers/samsung.png');
+}
+#kb{
+	background-image: url('../vote2014/images/customers/kb.png');
+}
+
+
 
 .more_desc{
 	clear:both;
