--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ ul.text_list{
 	text-align:center;
 	width:110px;
 	height:60px;
-	/* background-color:#ffffff; */
+	background-color:#ffffff;
 	border:3px solid #5e5e5e;
 }
 
