adjusted customer image right margin

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ footer{
 		float:left;
 		margin-bottom:5px;
 		margin-left:30px;
+		margin-right:2px;
 		text-align:center;
 	}
 
@@ -327,6 +328,7 @@ footer{
 		background-color:#ffffff;
 		float:left;
 		margin-left:12px;
+		margin-right:2px;
 		margin-bottom:5px;
 		text-align:center;
 	}
@@ -471,6 +473,7 @@ footer{
 		background-color:#ffffff;
 		float:left;
 		margin-left:12px;
+		margin-right:2px;
 		margin-bottom:5px;
 		text-align:center;
 	}
@@ -617,6 +620,7 @@ footer{
 		background-color:#ffffff;
 		float:left;
 		margin-left:12px;
+		margin-right:2px;
 		margin-bottom:5px;
 		text-align:center;
 	}
