--- a/style.css
+++ b/style.css
@@ -98,13 +98,24 @@ background-color: #e33d44;
 	width:80%;
 	margin:0 auto;
 	text-align:center;
-	font-size:40px;
 	letter-spacing:-1px;
 	/* text-shadow:0 0 4px rgba(0,0,0,0.8); */
 	color:#000000;
 	font-weight:bold;
 	line-height:40px;
 	padding:30px 0;
+}
+
+.headline1{
+	font-size:40px;	
+}
+
+.headline2{
+	font-size:40px;	
+}
+
+.headline3{
+	font-size:32px;	
 }
 
 section{
