--- a/style.css
+++ b/style.css
@@ -414,8 +414,8 @@ footer{
 	}
 
 .nav{
-	width:200px;
-	height:100px;
+	width:225px;
+	height:108px;
 	font-size:35px;
 	font-weight:bold;
 	margin-right:12px;
@@ -427,9 +427,7 @@ footer{
 	}
 
 .nav img{
-	width:0px;
-	height:0px;
-	display:none;
+	/* display:none; */
 }
 
 .nav_button{
